Added if11 read from file.
